<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/halfmove" />

        <EditText
            android:id="@+id/ed_cnt_halfmove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minEms="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/fullmove" />

        <EditText
            android:id="@+id/ed_cnt_fullmove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minEms="3" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ed_cnt_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:theme="@style/AppTheme.Button.Flat" />

        <Button
            android:id="@+id/ed_cnt_ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_weight="1"
            android:text="@string/ok"
            android:theme="@style/AppTheme.Button.Flat" />
    </TableRow>
</TableLayout>
