<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/material_baseline_grid_1x">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_comments_pre_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/material_baseline_grid_1x"
            android:paddingStart="@dimen/material_baseline_grid_1x">

            <EditText
                android:id="@+id/ed_comments_pre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_before"
                android:inputType="textMultiLine"
                android:minLines="2" />

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/comment_move" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_comments_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="text"
                android:lines="1"
                android:minEms="3" />

            <EditText
                android:id="@+id/ed_comments_nag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:lines="1"
                android:minEms="3" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_comments_post_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/material_baseline_grid_1x"
            android:paddingStart="@dimen/material_baseline_grid_1x">

            <EditText
                android:id="@+id/ed_comments_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_after"
                android:inputType="textMultiLine"
                android:minLines="5" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
</ScrollView>
